# bazelWorkspace

./: .bazelrc  .env  BUILD.bazel  Dockerfile  MODULE.bazel  Readme.md  docker-compose.yaml  requirements.txt  requirements_lock.txt
django_app/: BUILD.bazel
django_app/django_app/: models.py  settings.py
